--- a/index.html
+++ b/index.html
@@ -59,6 +59,105 @@
         </div>
     </section>
 
+    <section id="brand" class="container">
+      <div class="row m-0 py-5">
+        <img class="img-fluid col-lg-2 col-md-4 col-6" src="img/brand/1.png" alt="logo">
+        <img class="img-fluid col-lg-2 col-md-4 col-6" src="img/brand/2.png" alt="logo">
+        <img class="img-fluid col-lg-2 col-md-4 col-6" src="img/brand/3.png" alt="logo">
+        <img class="img-fluid col-lg-2 col-md-4 col-6" src="img/brand/4.png" alt="logo">
+        <img class="img-fluid col-lg-2 col-md-4 col-6" src="img/brand/5.png" alt="logo">
+        <img class="img-fluid col-lg-2 col-md-4 col-6" src="img/brand/6.png" alt="logo">
+      </div>
+    </section>
+
+    <section id="new" class="w-100" >
+      <div class="row p-0 m-0">
+        <div class="one col-lg-4 col-md-12 col-12 p-0">
+          <img class="img-fluid" src="img/new/1.jpg" alt="">
+          <div class="details">
+            <h2>Extreme Rare Sneakers</h2>
+            <button class="text-uppercase">Shop now</button>
+          </div>
+        </div>
+        <div class="one col-lg-4 col-md-12 col-12 p-0">
+          <img class="img-fluid" src="img/new/5.jpg" alt="">
+          <div class="details">
+            <h2>Awesome Blank Outfit</h2>
+            <button class="text-uppercase">Shop now</button>
+          </div>
+        </div>
+        <div class="one col-lg-4 col-md-12 col-12 p-0">
+          <img class="img-fluid" src="img/new/3.jpg" alt="">
+          <div class="details">
+            <h2>Sportwear Up To 50% off</h2>
+            <button class="text-uppercase">Shop now</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="featured" class="my-5 pb-5">
+      <div class="container text-center mt-5 py-5">
+        <h3>Our Featured</h3>
+        <hr class="mx-auto">
+        <p>Here you can check out our new  products with fair price on rymo..</p>
+      </div>
+      <div class="row mx-auto container-fluid">
+        <div class="product text-center col-lg-3 col-md-4 col-12">
+          <img class="img-fluid mb-3" src="img/featured/1.jpg" alt="">
+          <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+          <h5 class="p-name">Sport Boots</h5>
+          <h4 class="p-price">$92.00</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+        <div class="product text-center col-lg-3 col-md-4 col-12">
+          <img class="img-fluid mb-3" src="img/featured/2.jpg" alt="">
+          <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+          <h5 class="p-name">Sport Boots</h5>
+          <h4 class="p-price">$92.00</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+        <div class="product text-center col-lg-3 col-md-4 col-12">
+          <img class="img-fluid mb-3" src="img/featured/3.jpg" alt="">
+          <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+          <h5 class="p-name">Sport Boots</h5>
+          <h4 class="p-price">$92.00</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+        <div class="product text-center col-lg-3 col-md-4 col-12">
+          <img class="img-fluid mb-3" src="img/featured/4.jpg" alt="">
+          <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+          <h5 class="p-name">Sport Boots</h5>
+          <h4 class="p-price">$92.00</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+      </div>
+    </section>
+
 
 
 
